
    * Changed vm-imap-get-new-mail to do synchronization: reading and writing
      message attributes & labels, expunge messages in the cache.  Added
      variable `vm-imap-sync-on-get' to control this behavior.

    * Added command `vm-imap-synchronize' to do full synchronization. 

    * Trapping IMAP server errors uniformly.

    * New commands `vm-imap-start-bug-report' and `vm-imap-submit-bug-report'
      which track IMAP session details.

    * New variable `vm-imap-account-alist' allows multiple IMAP accounts to be
      handled uniformly.  The variable `vm-imap-server-list' is now obsolete.
      IMAP folders should be specified in the minibuffer using the
      account:mailbox format.  See the info node on IMAP folders.

    * New variable `vm-load-headers-only' to enable headers-only
      downloading of IMAP folders.  (This is still experimental.)

    * IMAP-FCC is extended to work for virtual folders, but only if
      the real parent message is an IMAP message.

VM 8.0.12-devo

  IMPROVEMENTS:

    * Display version info when calling `vm-version' interactively.  (Thanks
      to Ulrich Mueller)

    * Yanking of messages uses the same MIME decoding as the presentation
      now.  See the new variable `vm-mime-yank-attachments' to configure if
      attachments are also yanked.

    * `u-vm-color.el' is bundled and maintained with VM now.  Ulf Jasper handed
      it over to me as he switched to Gnus.

  BUGFIXES:

    * Detect w3 by using `locate-library' instead of checking for a bound
      `w3-about'. (Thanks to Klaus Straubinger)

    * vm.revno.el was not installed anymore b "make install".  (Thanks to
      Ulrich Mueller for reporting)

    * Insert `emacs-version' instead of creating wrong version string for
      XEmacs, i.e. the patch level was the major version. (Thanks to Stephen
      Turnbull)

    * Correctly locate the data directory for the pixmaps when running as a
      XEmacs package.
